#fix - backup config is fixed and now supports volume-snapshot

--- a/postgresql-cluster/standard/1.0/facets.yaml
+++ b/postgresql-cluster/standard/1.0/facets.yaml
@@ -158,46 +158,82 @@ spec:
           title: Enable Backup
           description: Enable backup configuration for this cluster
           default: false
-        create_backup_repo:
-          type: boolean
-          title: Create Backup Repository
-          description: Create a new PVC-based BackupRepo, or use existing one if disabled
-          default: true
+        backup_method:
+          type: string
+          title: Backup Method
+          description: Method to use for backups
+          enum:
+          - volume-snapshot
+          - basebackup
+          default: volume-snapshot
           x-ui-visible-if:
             field: spec.backup.enabled
             values:
             - true
+        create_backup_repo:
+          type: boolean
+          title: Create Backup Repository
+          description: Create a new cluster-scoped BackupRepo, or use existing one if disabled
+          default: true
+          x-ui-visible-if:
+            - field: spec.backup.enabled
+              values:
+              - true
+            - field: spec.backup.backup_method
+              values:
+              - basebackup
         backup_repo_name:
           type: string
           title: Shared Backup Repository Name
           description: Name of existing shared BackupRepo to use (required when create_backup_repo
             is false)
           x-ui-visible-if:
-            field: spec.backup.create_backup_repo
-            values:
-            - false
+            - field: spec.backup.enabled
+              values:
+              - true
+            - field: spec.backup.backup_method
+              values:
+              - basebackup
+            - field: spec.backup.create_backup_repo
+              values:
+              - false
           x-ui-required-if:
-            field: spec.backup.create_backup_repo
-            values:
-            - false
+            - field: spec.backup.backup_method
+              values:
+              - basebackup
+            - field: spec.backup.create_backup_repo
+              values:
+              - false
         backup_repo_storage_size:
           type: string
           title: Backup Storage Size
           description: Storage size for backup repository (only if creating new repo)
           default: 20Gi
           x-ui-visible-if:
-            field: spec.backup.create_backup_repo
-            values:
-            - true
+            - field: spec.backup.enabled
+              values:
+              - true
+            - field: spec.backup.create_backup_repo
+              values:
+              - true
+            - field: spec.backup.backup_method
+              values:
+              - basebackup
         backup_repo_storage_class:
           type: string
           title: Backup Storage Class
           description: Storage class for backup repository (leave empty for default)
           default: ''
           x-ui-visible-if:
-            field: spec.backup.create_backup_repo
-            values:
-            - true
+            - field: spec.backup.enabled
+              values:
+              - true
+            - field: spec.backup.create_backup_repo
+              values:
+              - true
+            - field: spec.backup.backup_method
+              values:
+              - basebackup
         enable_schedule:
           type: boolean
           title: Enable Backup Schedule
@@ -226,27 +262,19 @@ spec:
             field: spec.backup.enable_schedule
             values:
             - true
-        backup_method:
-          type: string
-          title: Backup Method
-          description: Method to use for backups
-          enum:
-          - volume-snapshot
-          - basebackup
-          default: volume-snapshot
-          x-ui-visible-if:
-            field: spec.backup.enable_schedule
-            values:
-            - true
         pitr_enabled:
           type: boolean
           title: Enable Point-in-Time Recovery (PITR)
-          description: Enable continuous archiving for point-in-time recovery capabilities
+          description: Enable continuous archiving for point-in-time recovery (only available with basebackup method)
           default: false
           x-ui-visible-if:
-            field: spec.backup.enabled
-            values:
-            - true
+            - field: spec.backup.enabled
+              values:
+              - true
+            - field: spec.backup.backup_method
+              values:
+              - basebackup
+
   required:
   - cluster_name
   - postgres_version
@@ -285,11 +313,11 @@ sample:
       create_read_service: true
     backup:
       enabled: false
-      create_backup_repo: true
+      backup_method: volume-snapshot
+      create_backup_repo: false
       backup_repo_storage_size: 20Gi
       backup_repo_storage_class: ''
       enable_schedule: false
       schedule_cron: 0 2 * * *
       retention_period: 7d
-      backup_method: volume-snapshot
       pitr_enabled: false
